--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,10 @@
+@import url("https://fonts.googleapis.com/css2?family=Dancing+Script&family=Roboto+Slab:wght@400;700&family=Young+Serif&display=swap");
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
 /* shared css  */
-
-@import url("https://fonts.googleapis.com/css2?family=Dancing+Script&family=Roboto+Slab:wght@400;700&family=Young+Serif&display=swap");
 
 * {
   margin: 0;
@@ -17,6 +17,7 @@
 font-family: 'Roboto Slab', serif;
 font-family: 'Young Serif', serif; */
 
+/* for informal  */
 .dancingFont {
   font-family: "Dancing Script", cursive;
 }
